--- a/.github/workflows/helloAction.yml
+++ b/.github/workflows/helloAction.yml
@@ -16,7 +16,8 @@ jobs:
     - name: install cppunit
       run: sudo apt install -y libcppunit-dev
     - name: configure
-      run: chmod +x configure
+      run: |
+      chmod +x configure
       ./configure
     - name: make
       run: make
