--- a/.github/workflows/helloAction.yml
+++ b/.github/workflows/helloAction.yml
@@ -15,10 +15,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: install cppunit
       run: sudo apt install -y libcppunit-dev
-    - name: configure
-      run: |
-      chmod +x configure
-      ./configure
+    - name: update configure permissions
+      run: chmod +x configure
+    - name: run configure  
+      run: ./configure
     - name: make
       run: make
     - name: make test
