--- a/.github/workflows/helloAction.yml
+++ b/.github/workflows/helloAction.yml
@@ -17,7 +17,7 @@ jobs:
       run: sudo apt install -y libcppunit-dev
     - name: run configure  
       run: |
-        chmod +x configure.
+        chmod +x configure
         /configure
     - name: make
       run: make
