--- a/.github/workflows/helloAction.yml
+++ b/.github/workflows/helloAction.yml
@@ -18,7 +18,7 @@ jobs:
     - name: run configure  
       run: |
         chmod +x configure
-        /configure
+        ./configure
     - name: make
       run: make
     - name: make test
