--- a/.github/workflows/helloAction.yml
+++ b/.github/workflows/helloAction.yml
@@ -21,5 +21,5 @@ jobs:
         ./configure
     - name: make
       run: make
-    - name: make test
+    - name: make regression test
       run: make test
